# ymse

./: .gitignore  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml
tests/: test_core.py  test_doffin.py
ymse/: __init__.py  core.py  doffin.py
